# byte-web

./: .gitignore  Cargo.toml  REFACTORING_NOTES.md  RESPONSIVE_DESIGN.md  biome.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
api/: hello.go  hello.rs
app/: globals.css  layout.tsx  page.tsx
app/circuito/: page.tsx
components/: index.ts
components/custom/: description.tsx  floating-triangle.tsx  home-transition-overlay.tsx  navbar.tsx  random-blob.tsx
components/magicui/: hero-video-dialog.tsx  hyper-text.tsx  line-shadow-text.tsx  progressive-blur.tsx  rainbow-button.tsx  scroll-progress.tsx  shiny-button.tsx  text-animate.tsx
components/section/: about.tsx  footer.tsx  introduction.tsx  landing.tsx
components/ui/: animated-gradient-text.tsx  animated-grid-pattern.tsx  blur-fade.tsx  particles.tsx  resizable-navbar.tsx  scroll-based-velocity.tsx  smooth-cursor.tsx  sparkles-text.tsx  sticky-banner.tsx
lib/: constants.ts  helpers.ts  hooks.ts  types.ts
tests/: home.spec.ts
