[package]
name = "byte-api"
description = "The public and private API for Byte's website."
version = "0.1.0"
authors = ["Hongmeng Zhai <zhaihongmeng@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.42.0", features = ["macros"] }
serde_json = { version = "1.0.133", features = ["raw_value"] }
serde = { version = "1.0.215" }
vercel_runtime = "1.1.4"

[lib]
path = "api/util.rs"

[[bin]]
name = "hello"
path = "api/hello.rs"
